ApplyImageService 수정